add skeleton homepage

--- a/signin.html
+++ b/signin.html
@@ -21,7 +21,7 @@
     <div class="content">
         <div class="form-container">
             <h2 class="text">Welcome Back!</h2>
-            <form action="/" method="post">
+            <form action="/home" method="post">
                 <input class="uid" type="text" name="userID" placeholder="Username"><br>
                 <input class="pwd" type="password" name="password" placeholder="Password"><br>
                 <button class="btn" type="submit">Sign In</button>
