--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Sign In</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <div class="title">
